# scribe-engine

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  SECURITY.md  build.rs
.cargo/: config.toml
notes-llm/: Cargo.toml
notes-llm/src/: main.rs
src/: audio.rs  capture.rs  lib.rs  macos_sckaudio.m  macos_systap.m  model.rs  notes.rs  transcribe.rs
tests/: notes_llama.rs  transcribe_whisper.rs
